# CLI-MIDI

./: CMakeLists.txt  README.ja.md  README.md  build.bat  build.sh
.github/workflows/: build.yml
github/workflows/: build.yml
src/: main.cpp
src/engine/: midi_out.cpp  midi_out.hpp  sequencer.cpp  sequencer.hpp
src/parser/: event_merger.hpp  smf_parser.cpp  smf_parser.hpp  tempo_map.cpp  tempo_map.hpp
src/ui/: piano_roll.hpp  tui.cpp  tui.hpp
